Carousel padding for items fixed, no cutoff

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -2,25 +2,27 @@
 #new_group {
   box-shadow: 2px 0 8px rgba(0,0,0,0.4);
   margin-left: 8px;
+  margin-right: 8px;
 }
 
 
 
 .glide{
-  width: 100vw;
+  width: 100%;
   display: flex;
   background-color: $light-gray;
   overflow: hidden;
   align-items: center;
+  padding: 8px 0px 8px 0px;
   // justify-content: space-between;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
 .group-img {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  box-shadow: 0 0 3px rgba(0,0,0,0.2);
   border: 2px solid $light-gray;
   object-fit: cover;
 }
@@ -33,15 +35,10 @@
 }
 
 .glide__slide{
-  padding: 6px;
-  &:last-child{
-    margin-right: 4px;
-  }
+
 }
 
-
-
-
-
-
+.glide__track{
+  flex-grow: 1;
+}
 
